[tool.poetry]
name = "tutors-lessons-durations-rates"
version = "0.1.0"
description = "Logic puzzle solver using Z3 Theorem Prover"
authors = ["Ayaz Badouraly <badouralix@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
z3-solver = "^4.8.14"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.940"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
